# Fractal-flame

./: README.md  pyproject.toml
src/: affine_transformations.py  command_line_interface.py  config.py  custom_exception.py  main.py  manager.py  project_types.py  timing_decorator.py  user_interface.py
src/core/: creating_pixel.py  fractal_manager.py  pixels_generation.py  symmetry.py  transformations.py  utils.py
src/utils/: random_element_selection.py  timing_decorator.py
src/visualization/: gamma_correction.py  image_renderer.py  points_to_pixels_converting.py  scaling.py
tests/: test_affine_transformations.py  test_command_line_interface.py  test_symmetry.py  test_transformations.py
tests/test_core/: test_creating_pixel.py  test_symmetry.py  test_transformations.py
tests/test_utils/: test_timing_decorator.py
tests/test_visualization/: test_creating_pixel.py  test_gamma_correction.py  test_image_renderer.py  test_points_to_pixels_converting.py  test_scaling.py
