[tool.poetry]
name = "backend-academy-2024-python-template"
version = "0.1.0"
description = ""
package-mode = false
authors = ["n.beskodarov <n.beskodarov@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
frozendict = "^2.4.6"
pillow = "^11.0.0"


[tool.poetry.dev-dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.1"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
pytest-repeat = "*"
pytest-asyncio = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # несовместимо с другими линтерами
    "D212",  # делает строки документации непривлекательными, на мой взгляд
    "COM812",  # несовместимо с форматировщиком
    "ISC001",  # может конфликтовать с форматировщиком
    "RUF002",  # кириллица в строках документации
    "S311",  # стандартные псевдослучайные генераторы не подходят для криптографических целей
    ]
